Tue Jul 24 15:16:50 2001  Brian Gough  <bjg@network-theory.co.uk>

	* single precision fft now uses float throughout, rather than
 	mixing float and double.

Mon Jul 16 12:38:29 2001  Brian Gough  <bjg@network-theory.co.uk>

	* reorganized function names and split work

Tue May  1 14:35:52 2001  Brian Gough  <bjg@network-theory.co.uk>

	* Makefile.am (libgslfft_la_SOURCES): removed spurious headers
 	from SOURCES line

2000-10-19  Brian Gough  <bjg@inweb.aethos.co.uk>

	* hc_init.c (FUNCTION): scratch space changed to n elements
	instead of 2*n (apparently the routine previously allocated too
	much space)

Wed Feb 16 14:43:42 2000  Brian Gough  <bjg@network-theory.co.uk>

	* Makefile.am (pkginclude_HEADERS): added missing
 	pkginclude_HEADERS for float functions.

Mon Feb 14 15:11:55 2000  Brian Gough  <bjg@network-theory.co.uk>

	* made all internal functions static (required a slight
 	reorganization)

Fri Aug  6 11:20:25 1999  Brian Gough  <bjg@network-theory.co.uk>

	*  removed dependence on rand() and RAND_MAX

Sun Feb 14 17:31:21 1999  Brian Gough  <bjg@netsci.freeserve.co.uk>

	* started converting header files to use gsl_complex_packed_array
 	more consistently

Mon Dec 14 22:55:00 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* real_init.c: fixed a possible malloc(0) bug found by Electric Fence.

Mon Nov 23 15:47:13 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* gsl_fft_complex.h, gsl_fft_complex_float.h: removed data[][]
 	type arguments from prototypes since this seems to be non-ANSI.
 	Use **data instead.

1998-11-09    <bjg@ancho.lanl.gov>

	* compare_source.c: fix up int/unsigned format types to prevent
	warnings

Wed Oct 28 15:07:22 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* c.c: added #include <string.h> for memcpy

	* c_float.c: added #include <string.h> for memcpy

Thu Sep 10 12:05:07 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* removed wavetable from function names to make them shorter and
 	avoid confusion, e.g. gsl_fft_complex_wavetable_alloc ->