@@ -6,7 +6,7 @@ INCLUDES= -I$(top_builddir)
 
 libgslpoly_la_SOURCES = dd.c eval.c solve_quadratic.c solve_cubic.c zsolve_quadratic.c zsolve_cubic.c zsolve.c zsolve_init.c
 
-noinst_HEADERS = balance.c companion.c norm.c qr.c
+noinst_HEADERS = balance.c companion.c qr.c
 
 TESTS = $(check_PROGRAMS)
 
