@@ -1,3 +1,7 @@
+2005-05-19  Brian Gough  <bjg@network-theory.co.uk>
+
+	* Makefile.am (noinst_HEADERS): removed norm.c (unused)
+
 Sun Dec  2 22:02:31 2001  Brian Gough  <bjg@network-theory.co.uk>
 
 	* dd.c: added divided differences code from Dan, Ho-Jin
