@@ -1,3 +1,7 @@
+2005-05-19  Brian Gough  <bjg@network-theory.co.uk>
+
+	* Makefile.am (noinst_HEADERS): removed unused real.c
+
 Tue Jul 24 15:16:50 2001  Brian Gough  <bjg@network-theory.co.uk>
 
 	* single precision fft now uses float throughout, rather than
